<resources>
    <string name="app_name">Catering dla Ciebie!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_food_list">Lista dań</string>

    <string name="menu_home">Strona główna</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_food_detail">Szczegóły</string>

    <string name="popular_categories">Popularne</string>
    <string name="best_deals">Najlepsze oferty</string>
    <string name="menu_menu">Kategorie</string>
    <string name="menu_cart">Koszyk</string>
    <string name="size">Rozmiar porcji</string>
    <string name="add_on">Dodatki</string>
    <string name="action_clear_cart">Wyczyść koszyk</string>
    <string name="sign_out">Wyloguj się</string>

</resources>
