<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pl.wsiz.katering.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
    android:id="@+id/nav_menu"
    android:name="pl.wsiz.katering.ui.menu.MenuFragment"
    android:label="@string/menu_menu"
    tools:layout="@layout/fragment_menu" >

    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="pl.wsiz.katering.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" >

    </fragment>

    <fragment
        android:id="@+id/nav_food_detail"
        android:name="pl.wsiz.katering.ui.fooddetail.FoodDetailFragment"
        android:label="@string/menu_food_detail"
        tools:layout="@layout/fragment_food_detail" />

    <fragment
        android:id="@+id/nav_food_list"
        android:name="pl.wsiz.katering.ui.foodlist.FoodListFragment"
        android:label="@string/menu_food_list"
        tools:layout="@layout/fragment_food_list">
    </fragment>
</navigation>